# ABC

./: ABC.cmake  CMakeLists.txt  README.md  SuperBuild.cmake  sample.xml  sample_standalone.xml
Engine/aniso/: MRAnisotropicFilter.txx
Engine/basicimg/: CMakeLists.txt  ConnectedComponentsFilter.txx  ImageDirectionStandardizer.txx  IntensityMatcher.h  IntensityMatcher.txx  KMeansQuantizeImageFilter.txx  VectorBlurImageFilter.h  VectorBlurImageFilter.txx  itkApproximateLogImageFilter.h  itkTsallisLogDerivativeImageFilter.h  itkTsallisLogImageFilter.h  testit.cxx  testquant.cxx
Engine/bias/: CMakeLists.txt  DiffusionBasedBiasCorrector.h  DiffusionBasedBiasCorrector.txx  LLSBiasCorrector.h  LLSBiasCorrector.txx  test.cxx
Engine/brainseg/: CMakeLists.txt  EMSParameters.cxx  EMSParameters.h  EMSegmentationFilter.h  EMSegmentationFilter.txx  MaxLikelihoodFluidWarpEstimator.h  MaxLikelihoodFluidWarpEstimator.txx  main.cxx  runEMS.cxx  runEMS.h
Engine/common/: DynArray.txx  MersenneTwisterRNG.cxx  RNG.txx  Timer.cxx  Timer.h  muFile.cxx  testheap.cxx  vtkTextOutputWindow.cxx
Engine/conn/: CMakeLists.txt
Engine/register/: AmoebaOptimizer.cxx  AtlasRegistrationMethod.h  AtlasRegistrationMethod.txx  CMakeLists.txt  GradientDescentOptimizer.cxx  NegativeHCImageMatchMetric.txx  NegativeMIImageMatchMetric.h  NegativeMIImageMatchMetric.txx  PairRegistrationMethod.h  PairRegistrationMethod.txx  PowellOptimizer.cxx  RegistrationParameters.h  SimpleGreedyFluidRegistration.h  SimpleGreedyFluidRegistration.txx  SimulatedAnnealingOptimizer.cxx  chaff2itk.cxx  mireg_affine.cxx  resample_fb.cxx  resample_label.cxx  test_fluid.cxx
Engine/robust/: CMakeLists.txt  FastMCDSampleFilter.cxx  FastMCDSampleFilter.h  KruskalMSTClusteringProcess.h  PrimMSTClusteringProcess.cxx  PrimMSTClusteringProcess.h  test.cxx
Engine/spr/: CMakeLists.txt  KMeansEstimator.h  KNNClassifier.h  TreeStructuredVectorQuantizer.h  test.cxx  testbw.cxx
Engine/xmlio/: CMakeLists.txt  EMSParametersXMLFile.cxx
Slicer3CommandLine/: ABC.cxx  ABC.xml  CMakeLists.txt
Slicer3CommandLine/Resources/: SCILogo.h
Slicer4CommandLine/: ABC.cxx  ABC.xml  ABC.xml.in  CMakeLists.txt
StandAloneCLI/: CMakeLists.txt  main_cli.cxx
StandAloneGUI/: CMakeLists.txt  GUI.cxx  GUI.fl  GUI.h  main.cxx  main_gui.cxx
Test/: ABCTestAll.cxx  CMakeLists.txt  gentest.cxx
Test/Atlas/: 3.mha
Test/Data/: testtruth_p1.mha  testtruth_p2.mha  testtruth_p3.mha
