#Project(ABC)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# Build Slicer4 plugin by default
OPTION(COMPILE_SLICER4COMMANDLINE "Compile Slicer4CommandLine" ON)
IF(COMPILE_SLICER4COMMANDLINE) 
  SUBDIRS(Slicer4CommandLine)
ENDIF(COMPILE_SLICER4COMMANDLINE)

OPTION(COMPILE_COMMANDLINE "Compile CommandLine" OFF)
IF(COMPILE_COMMANDLINE) 
  SUBDIRS(Engine/brainseg)
ENDIF(COMPILE_COMMANDLINE)

OPTION(COMPILE_STANDALONEGUI "Compile StandAloneGUI" OFF)
IF(COMPILE_STANDALONEGUI) 
  SUBDIRS(StandAloneGUI)
ENDIF(COMPILE_STANDALONEGUI)

